--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,4 +27,6 @@
       </nav>
     {%- endif -%}
   </div>
+  
+  <link rel="stylesheet" href="/path/to/folder/css/academicons.min.css"/>
 </header>
