--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,13 +10,13 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$text-color:       #e6e6e6 !default; // #111 <= original
+$background-color: #1d1d1d !default; // #fdfdfd <= original
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-light: #565656 !default; // lighten($grey-color, 40%) <= original
+$grey-color-dark:  #adadad !default; // darken($grey-color, 25%) <= original
 
 $table-text-align: left !default;
 
