--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             {%- endif -%}
             </li>
             {%- if site.email -%}
-            <li> class="u-email" href="mailto:{{ site.email }}">{{ site.email }} </li>
+            <li> site.email </li>
             {%- endif -%}
         </ul>
       </div>
