--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             {%- endif -%}
             </li>
             {%- if site.email -%}
-            <li> {{ site.email }} </li>
+            <li> "ezekiel <dot> williams <at> mila.quebec" </li>
             {%- endif -%}
         </ul>
       </div>
