--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             {%- endif -%}
             </li>
             {%- if site.email -%}
-            <li> ezekiel&lt;dot&gt;williams&lt;at&gt;mila.quebec </li>
+            <li style="color:yellow"> ezekiel.williams&lt;at&gt;mila.quebec </li>
             {%- endif -%}
         </ul>
       </div>
