--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
             {%- if site.email -%}
             <li style="color:yellow"> ezekiel.williams&lt;at&gt;mila.quebec </li>
             {%- endif -%}
-            <li <a href="cv_current.pdf" target="_blank">CV.</a> </li>
+            <li><a href="cv_current.pdf">CV</a></li>
         </ul>
       </div>
 
