--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header class="site-header" role="banner">
 
+  <img src="cc_jthanew.png" alt="title">
+
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
