--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header" role="banner">
 
-  <img src="cc_jthanew.png" alt="title">
+  <img src="cc_jthanew.png" alt="title", width="25">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
