--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             </li>
             {%- if site.email -%}<li style="color:yellow"> ezekiel.williams&lt;at&gt;mila.quebec </li>{%- endif -%}
             {%- if site.gs_title -%}<li><i class="ai ai-google-scholar ai-1x"></i> <a href="https://scholar.google.ca/citations?user=KwgL380AAAAJ&hl=en&oi=ao"><span class="username">{{ site.gs_title| escape }}</span></a></li>{%- endif -%}
-  			{%- if site.cv_link -%}<li><a href="{{ site.cv_link | relative_url }}">CV</a></li>
+  			{%- if site.cv_link -%}<li><a href="{{ site.cv_link | relative_url }}">CV</a></li>{%- endif -%}
         </ul>
       </div>
 
