--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
             <!---
             {%- if site.gs_title -%}<li><i class="ai ai-google-scholar ai-1x"></i> <a href="https://scholar.google.ca/citations?user=KwgL380AAAAJ&hl=en&oi=ao"><span class="username">{{ site.gs_title| escape }}</span></a></li>{%- endif -%}
             --->
-  			{%- if site.cv_link -%}<li><a href="{{ site.cv_link | relative_url }}">CV</a></li>{%- endif -%}
+  			{%- if site.cv_link -%}<li><a href="{{ site.cv_link | relative_url }}">cv</a></li>{%- endif -%}
         </ul>
       </div>
 
