--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/academicons.min.css" | relative_url }}"/>
-  <link rel="shortcut icon" type="image/png" href="cc_jthanew.png">
+  <link rel="shortcut icon" type="image/png" href="/assets/cc_jthanew.png">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
