--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,18 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">{%- seo -%} {%- feed_meta -%} {%- if jekyll.environment == 'production' and site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">&lt;head&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta charset="utf-8"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- seo -%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="{{ "/css/academicons.min.css" | relative_url }}"/&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="shortcut icon" type="image/png" href="/assets/cc_jthanew.png"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- feed_meta -%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- if jekyll.environment == 'production' and site.google_analytics -%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{%- include google-analytics.html -%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- endif -%}</span></p>
+<p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 </body>
 </html>
