--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="2113.6">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    span.s1 {font-kerning: none}
-  </style>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {%- seo -%}
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/css/academicons.min.css" | relative_url }}"/>
+  <link rel="shortcut icon" type="image/png" href="/assets/cc_jthanew.png">
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- include google-analytics.html -%}
+  {%- endif -%}
 </head>
-<body>
-<p class="p1"><span class="s1">&lt;head&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta charset="utf-8"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- seo -%}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="{{ "/css/academicons.min.css" | relative_url }}"/&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;link rel="shortcut icon" type="image/png" href="/assets/cc_jthanew.png"&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- feed_meta -%}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- if jekyll.environment == 'production' and site.google_analytics -%}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{%- include google-analytics.html -%}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{%- endif -%}</span></p>
-<p class="p1"><span class="s1">&lt;/head&gt;</span></p>
-</body>
-</html>
